--- a/app/src/at-uyennguyen/res/layout/food_item.xml
+++ b/app/src/at-uyennguyen/res/layout/food_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imgEllipsis"
@@ -11,7 +11,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
-        android:src="@mipmap/ellipsis"
+        android:src="@drawable/img_ellipsis"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
 
@@ -31,7 +31,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
-        android:src="@mipmap/heartblack"
+        android:src="@drawable/img_heartblack"
         app:layout_constraintLeft_toLeftOf="@+id/imgAvatar"
         app:layout_constraintTop_toBottomOf="@+id/imgPicture" />
 
@@ -40,7 +40,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
-        android:src="@mipmap/comment"
+        android:src="@drawable/img_comment"
         app:layout_constraintStart_toEndOf="@id/imgHeart"
         app:layout_constraintTop_toTopOf="@id/imgHeart" />
 
@@ -49,7 +49,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
-        android:src="@mipmap/share"
+        android:src="@drawable/img_share"
         app:layout_constraintStart_toEndOf="@id/imgComment"
         app:layout_constraintTop_toTopOf="@id/imgHeart" />
 
@@ -59,24 +59,24 @@
         android:layout_height="25dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="20dp"
-        android:src="@mipmap/h"
+        android:src="@drawable/img_h"
         app:layout_constraintLeft_toLeftOf="@id/imgHeart"
         app:layout_constraintTop_toBottomOf="@id/imgHeart" />
 
     <TextView
-        tools:text="abcjshdiw"
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@android:color/black"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:layout_marginTop="5dp"
         app:layout_constraintStart_toEndOf="@+id/imgAvatar"
-        app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
+        app:layout_constraintTop_toTopOf="@+id/imgAvatar"
+        tools:text="abcjshdiw" />
 
     <TextView
         android:id="@+id/tvNumberLike"
