--- a/app/src/at-nguyenha/res/layout/fragment_register.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_register.xml
@@ -11,159 +11,169 @@
         android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g2"
+            android:id="@+id/guideLineLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.05"/>
+            app:layout_constraintGuide_percent="0.05" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g3"
+            android:id="@+id/guideLineRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.95"/>
+            app:layout_constraintGuide_percent="0.95" />
 
         <ImageView
-            android:id="@+id/imageHeader"
+            android:id="@+id/imgHeader"
             android:layout_width="match_parent"
             android:layout_height="@dimen/layout_height_img_img_header"
             android:scaleType="centerCrop"
             android:src="@drawable/image_header"
             app:layout_constraintTop_toTopOf="parent"
-            />
+            tools:layout_editor_absoluteX="0dp" />
 
         <ImageView
             android:id="@+id/imgLogo"
             android:layout_width="@dimen/layout_width_92"
             android:layout_height="@dimen/layout_height_32dp"
-            android:layout_marginTop="@dimen/layout_margintop_60dp"
             android:layout_marginLeft="@dimen/layout_marginleft_20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="@dimen/layout_margintop_60dp"
+            android:src="@drawable/image_logo"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:src="@drawable/image_logo"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_width="@dimen/layout_width_304dp"
-            android:layout_height="@dimen/layout_height_64dp"
+            android:id="@+id/tvContentHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/layout_marginleft_20dp"
-            app:layout_constraintTop_toBottomOf="@id/imgLogo"
-            app:layout_constraintLeft_toLeftOf="@id/imgLogo"
             android:layout_marginTop="@dimen/layout_margintop_44dp"
             android:fontFamily="Nunito-Bold"
+            android:text="@string/textview_text_start_from_scratch"
             android:textSize="@dimen/textview_textsize_24sp"
-            android:text="@string/textview_text_start_from_scratch"/>
+            app:layout_constraintLeft_toLeftOf="@id/imgLogo"
+            app:layout_constraintTop_toBottomOf="@id/imgLogo" />
 
         <TextView
-            android:textSize="@dimen/textview_textsize_14sp"
             android:id="@+id/tvLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageHeader"
-            app:layout_constraintLeft_toLeftOf="@+id/g2"
+            android:fontFamily="Nunito-Regular"
             android:text="@string/textview_text_create_account_here"
-            android:fontFamily="Nunito-Regular"/>
+            android:textSize="@dimen/textview_textsize_14sp"
+            app:layout_constraintLeft_toLeftOf="@+id/guideLineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/imgHeader" />
 
         <TextView
-            android:id="@+id/tvFullname"
-            android:layout_width="@dimen/layout_width_84dp"
-            android:layout_height="19sp"
-            android:text="@string/textview_text_fullname"
+            android:id="@+id/tvFullName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/layout_margintop_20dp"
+            android:text="@string/textview_text_fullname"
             android:textSize="@dimen/textview_textsize_14sp"
-            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
-            app:layout_constraintLeft_toRightOf="@+id/g2"/>
+            app:layout_constraintLeft_toRightOf="@+id/guideLineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
 
         <EditText
-            android:id="@+id/edtFullname"
-            android:layout_width="@dimen/layout_width_276dp"
+            android:id="@+id/edtFullName"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
+            android:layout_marginRight="@dimen/layout_marginright_20dp"
             android:hint="@string/edittext_hint_fullname"
-            app:layout_constraintTop_toBottomOf="@+id/tvFullname"
-            app:layout_constraintEnd_toEndOf="@id/g3"
-            app:layout_constraintStart_toStartOf="@id/g2"
-            tools:ignore="Autofill"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:textSize="@dimen/textview_textsize_20sp"
+            app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
+            app:layout_constraintRight_toRightOf="@id/guideLineRight"
+            app:layout_constraintTop_toBottomOf="@+id/tvFullName"
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/tvEmail"
-            android:layout_width="@dimen/layout_width_84dp"
-            android:layout_height="@dimen/layout_height_20dp"
-            android:text="@string/textview_text_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/layout_margintop_20dp"
+            android:text="@string/textview_text_email"
             android:textSize="@dimen/textview_textsize_14sp"
-            app:layout_constraintTop_toBottomOf="@+id/edtFullname"
-            app:layout_constraintLeft_toRightOf="@+id/g2"/>
+            app:layout_constraintLeft_toRightOf="@+id/guideLineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/edtFullName" />
 
         <EditText
             android:id="@+id/edtEmailRegister"
-            android:layout_width="@dimen/layout_width_376dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
+            android:layout_marginRight="@dimen/layout_marginright_20dp"
             android:hint="@string/edittext_hint_user_email"
+            android:inputType="textEmailAddress"
+            android:textSize="@dimen/textview_textsize_20sp"
+            app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
+            app:layout_constraintRight_toRightOf="@id/guideLineRight"
             app:layout_constraintTop_toBottomOf="@+id/tvEmail"
-            app:layout_constraintEnd_toEndOf="@id/g3"
-            app:layout_constraintStart_toStartOf="@id/g2"
-            tools:ignore="Autofill"
-            android:inputType="textEmailAddress"/>
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/tvPassword"
-            android:layout_width="@dimen/layout_width_84dp"
-            android:layout_height="@dimen/layout_height_20dp"
-            android:text="@string/textview_text_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/layout_margintop_20dp"
+            android:text="@string/textview_text_password"
             android:textSize="@dimen/textview_textsize_14sp"
-            app:layout_constraintTop_toBottomOf="@+id/edtEmailRegister"
-            app:layout_constraintLeft_toRightOf="@+id/g2"/>
+            app:layout_constraintLeft_toRightOf="@+id/guideLineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/edtEmailRegister" />
 
 
         <EditText
             android:id="@+id/edtPassword"
-            android:layout_width="@dimen/layout_width_376dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
+            android:layout_marginRight="@dimen/layout_marginright_20dp"
             android:hint="@string/edittext_hint_password"
+            android:inputType="textPassword"
+            android:textSize="@dimen/textview_textsize_20sp"
+            app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
+            app:layout_constraintRight_toRightOf="@id/guideLineRight"
             app:layout_constraintTop_toBottomOf="@+id/tvPassword"
-            app:layout_constraintEnd_toEndOf="@id/g3"
-            app:layout_constraintStart_toStartOf="@id/g2"
-            tools:ignore="Autofill"
-            android:inputType="textPassword"/>
+            tools:ignore="Autofill" />
 
         <Button
-            android:textColor="#FFFFFF"
             android:id="@+id/btnRegister"
-            android:layout_width="@dimen/layout_width_376dp"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/layout_height_52dp"
-            app:layout_constraintStart_toStartOf="@id/g2"
-            app:layout_constraintEnd_toEndOf="@id/g3"
+            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
+            android:layout_marginTop="@dimen/layout_margintop_20dp"
+            android:layout_marginRight="@dimen/layout_marginright_20dp"
             android:background="@drawable/button"
             android:text="@string/button_text_create_account"
-
-            app:layout_constraintTop_toBottomOf="@id/edtPassword"
-            android:layout_marginTop="@dimen/layout_margintop_20dp"/>
+            android:textColor="@android:color/white"
+            app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
+            app:layout_constraintRight_toRightOf="@id/guideLineRight"
+            app:layout_constraintTop_toBottomOf="@id/edtPassword" />
 
         <TextView
-            android:id="@+id/tvSratch"
+            android:id="@+id/tvScratch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/layout_margintop_20dp"
             android:text="@string/textview_text_already_have_an_account"
             android:textSize="14sp"
-            android:layout_marginTop="@dimen/layout_margintop_20dp"
-            app:layout_constraintTop_toBottomOf="@id/btnRegister"
-            app:layout_constraintLeft_toLeftOf="@id/g2"
-            app:layout_constraintRight_toRightOf="@id/g3"/>
+            app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
+            app:layout_constraintRight_toRightOf="@id/guideLineRight"
+            app:layout_constraintTop_toBottomOf="@id/btnRegister" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/textview_color_account"
+            android:layout_marginBottom="@dimen/layout_marginbottom_32dp"
             android:text="@string/textview_text_login_here"
-            app:layout_constraintTop_toBottomOf="@id/tvSratch"
-            app:layout_constraintLeft_toLeftOf="@id/g2"
-            app:layout_constraintRight_toRightOf="@id/g3"
+            android:textColor="@color/textview_color_account"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="@dimen/layout_marginbottom_32dp"/>
+            app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
+            app:layout_constraintRight_toRightOf="@id/guideLineRight"
+            app:layout_constraintTop_toBottomOf="@id/tvScratch" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </ScrollView>
