--- a/app/src/at-nguyenha/res/values/dimens.xml
+++ b/app/src/at-nguyenha/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="textview_textsize_20sp">20sp</dimen>
     <dimen name="layout_margin_top">32dp</dimen>
     <dimen name="layout_marginbottom_32dp">32dp</dimen>
+    <dimen name="layout_marginright_20dp">20dp</dimen>
 </resources>
