--- a/app/src/at-nguyenha/res/layout/fragment_login.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_login.xml
@@ -74,13 +74,13 @@
             app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
 
         <EditText
-            android:id="@+id/edtUsername"
+            android:id="@+id/edtEmailLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/layout_marginleft_20dp"
             android:layout_marginRight="@dimen/layout_marginright_20dp"
             android:hint="@string/edittext_hint_user_email"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintStart_toStartOf="@id/guideLineLeft"
             app:layout_constraintTop_toBottomOf="@+id/tvEmail"
@@ -94,7 +94,7 @@
             android:text="@string/textview_text_password"
             android:textSize="@dimen/textview_textsize_14sp"
             app:layout_constraintLeft_toRightOf="@+id/guideLineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/edtUsername" />
+            app:layout_constraintTop_toBottomOf="@+id/edtEmailLogin" />
 
         <TextView
             android:id="@+id/tvForgotpassword"
