--- a/app/src/at-nguyenha/res/layout/fragment_register.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_register.xml
@@ -91,7 +91,7 @@
             tools:ignore="Autofill" />
 
         <TextView
-            android:id="@+id/tvEmail"
+            android:id="@+id/tvEmailRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/layout_margintop_20dp"
@@ -101,17 +101,17 @@
             app:layout_constraintTop_toBottomOf="@+id/edtFullName" />
 
         <EditText
-            android:id="@+id/edtUsername"
+            android:id="@+id/edtEmailRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/layout_marginleft_20dp"
             android:layout_marginRight="@dimen/layout_marginright_20dp"
             android:hint="@string/edittext_hint_user_email"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
             app:layout_constraintRight_toRightOf="@id/guideLineRight"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
+            app:layout_constraintTop_toBottomOf="@+id/tvEmailRegister"
             tools:ignore="Autofill" />
 
         <TextView
@@ -122,8 +122,7 @@
             android:text="@string/textview_text_password"
             android:textSize="@dimen/textview_textsize_14sp"
             app:layout_constraintLeft_toRightOf="@+id/guideLineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/edtUsername" />
-
+            app:layout_constraintTop_toBottomOf="@+id/edtEmailRegister" />
 
         <EditText
             android:id="@+id/edtPassword"
@@ -175,6 +174,5 @@
             app:layout_constraintRight_toRightOf="@id/guideLineRight"
             app:layout_constraintTop_toBottomOf="@id/tvScratch" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </ScrollView>
