--- a/app/src/at-daiho/res/values/colors.xml
+++ b/app/src/at-daiho/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="color_menu_title_selected">#66B1C9</color>
+    <color name="color_menu_title_normal">#7C7C7C</color>
 </resources>
