--- a/app/src/at-uyennguyen/res/layout/fragment_login.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_login.xml
@@ -72,7 +72,7 @@
             android:layout_height="25.81dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="56dp"
-            android:src="@drawable/loco"
+            android:src="@drawable/img_loco"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
