--- a/app/src/at-uyennguyen/res/layout/fragment_profile.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_profile.xml
@@ -99,7 +99,7 @@
             android:layout_height="20dp"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="57dp"
-            android:src="@drawable/back"
+            android:src="@drawable/img_back"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -108,7 +108,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/avatar"
+            android:src="@drawable/img_avatar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvEdit" />
