--- a/app/src/at-uyennguyen/res/layout/fragment_signin.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_signin.xml
@@ -92,7 +92,7 @@
             android:layout_height="26dp"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="61dp"
-            android:src="@drawable/loco"
+            android:src="@drawable/img_loco"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
