--- a/app/src/at-daiho/res/layout/activity_drawer_layout.xml
+++ b/app/src/at-daiho/res/layout/activity_drawer_layout.xml
@@ -11,16 +11,15 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FF8952">
+        android:background="@color/drawer_layout_background">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
             android:textColor="@android:color/white"
-            android:textSize="30dp"
-            android:text="Hello" />
+            android:textSize="@dimen/text_size_16"
+            android:text="@string/lorem_text" />
 
     </FrameLayout>
 
