--- a/app/src/at-nguyenha/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_edit_profile.xml
@@ -126,7 +126,7 @@
             app:layout_constraintTop_toBottomOf="@+id/edtBio" />
 
         <TextView
-            android:id="@+id/tvEmaiiEdit"
+            android:id="@+id/tvEmailEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/layout_margintop_20dp"
@@ -146,7 +146,7 @@
             android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintEnd_toEndOf="@id/guideLineRight"
             app:layout_constraintStart_toStartOf="@id/guideLineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmaiiEdit"
+            app:layout_constraintTop_toBottomOf="@+id/tvEmailEdit"
             tools:ignore="Autofill" />
 
         <TextView
