--- a/app/src/at-nguyenha/res/layout/fragment_register.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_register.xml
@@ -164,6 +164,7 @@
             app:layout_constraintTop_toBottomOf="@id/btnRegister" />
 
         <TextView
+            android:id="@+id/tvLoginHere"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/layout_marginbottom_32dp"
